# mavlink_joy_bridge

./: .gitignore  CMakeLists.txt  README.md  package.xml
.cache/clangd/index/: Cdr.h.C01F2B797C173B7B.idx  Exception.h.BC6458051A3FF945.idx  FastBuffer.h.74C730E01E3C199A.idx  NotEnoughMemoryException.h.ABBE049707012A0F.idx  Python.h.79CDBA7BAB1711EC.idx  __multiarray_api.h.6F66DAD4CCF161E2.idx  __stdarg___gnuc_va_list.h.E704E7498A9661FC.idx  __stdarg___va_copy.h.669BE0862F280020.idx  __stdarg_va_arg.h.5D5900E0A8D24667.idx  __stdarg_va_copy.h.F43D800D3A670206.idx  __stdarg_va_list.h.7A95988657B35419.idx  __stddef_max_align_t.h.CB991EFE63E430AF.idx  __stddef_null.h.761DEBC4B9B9B9F6.idx  __stddef_nullptr_t.h.9772E306C8E7812F.idx  __stddef_offsetof.h.4CAADE2D497F403A.idx  __stddef_ptrdiff_t.h.FAD9789F1DAF57D5.idx  __stddef_rsize_t.h.7256082BAE7FC6FC.idx  __stddef_size_t.h.BE303F57631C2DE1.idx  __stddef_wchar_t.h.E05E748117012EAE.idx  _adc_raw_s.c.D171BE766C0ED2C5.idx  _neighborhood_iterator_imp.h.6CBCF1411D030591.idx  _numpyconfig.h.FA7C687D874A14E8.idx  _sealien_mavlink_joy_bridge_s.ep.rosidl_typesupport_c.c.DE9A2E9DBDF62104.idx  _sealien_mavlink_joy_bridge_s.ep.rosidl_typesupport_fastrtps_c.c.8675AB72F841E5EE.idx  _sealien_mavlink_joy_bridge_s.ep.rosidl_typesupport_introspection_c.c.B8F543FF3B47C468.idx  abstract.h.49BE7589CE9FA323.idx  abstract.h.55C4E54619DE4BB0.idx  action_type_support_struct.h.D39D3BA174534109.idx  adc_joy_mapper_core.cpp.FE0263C4B37011D9.idx  adc_joy_mapper_core.hpp.72533D31526F94FA.idx  adc_joy_mapper_node.cpp.CED2E7A6B42C60A6.idx  adc_raw.hpp.88519DD3B46D38EB.idx  adc_raw__builder.hpp.D90F41A8A6A6E60A.idx  adc_raw__functions.c.151A7599766326A6.idx  adc_raw__functions.h.ABC72A401B753ECF.idx  adc_raw__rosidl_typesupport_fastrtps_c.h.FFDEA46EEC574B2E.idx  adc_raw__rosidl_typesupport_fastrtps_cpp.hpp.CEC47C64D342E23B.idx  adc_raw__rosidl_typesupport_introspection_c.h.8D0CE359962A9798.idx  adc_raw__struct.h.956099E2A984E7D4.idx  adc_raw__struct.hpp.9CBF7C038D13AC4A.idx  (+712 more)
config/: adc_joy_mapper.yaml  adc_to_joy_mapper.yaml  default.yaml  io_joy_bridge.yaml  mavlink_adc_bridge.yaml  mavlink_mixed_io_receiver.yaml  mixed_io_joy_bridge.yaml  web_sim.yaml
include/sealien_mavlink_joy_bridge/: adc_joy_mapper_core.hpp  adc_to_joy_mapper.hpp  io_joy_bridge_core.hpp  mavlink_adc_bridge_core.hpp  mavlink_joy_bridge_core.hpp  mavlink_mixed_io_receiver.hpp  mavlink_rc_decode.hpp  mixed_io_joy_bridge_core.hpp
launch/: sealien_mavlink_joy_bridge.launch.py  sealien_mavlink_joy_bridge_obc_sim.launch.py  sealien_mavlink_joy_bridge_sim.launch.py
mavlink/: sealien_rc.xml
msg/: AdcRaw.msg  MixedIoRaw.msg
scripts/: e2e_test.sh  rc_web_sim_server.py  start_rc_web_sim.sh
src/: adc_joy_mapper_core.cpp  adc_joy_mapper_node.cpp  adc_to_joy_mapper.cpp  adc_to_joy_mapper_node.cpp  io_joy_bridge_core.cpp  io_joy_bridge_node.cpp  mavlink_adc_bridge_core.cpp  mavlink_adc_bridge_node.cpp  mavlink_joy_bridge_core.cpp  mavlink_joy_bridge_node.cpp  mavlink_mixed_io_receiver.cpp  mavlink_mixed_io_receiver_node.cpp  mixed_io_joy_bridge_core.cpp  mixed_io_joy_bridge_node.cpp
tools/: mavlink_io_udp_send.cpp  mavlink_mixed_io_udp_send.cpp  mavlink_rc_udp_send.cpp
web/: app.js  index.html  style.css
