<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sealien_mavlink_joy_bridge</name>
  <version>0.4.0</version>
  <description>Three-stage bridge: MCU MIXED_IO_DATA (MAVLink) -> /mixed_io/raw -> /joy.</description>
  <maintainer email="yi.lu@sealien.cn">Yi Lu</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
